Update README
updated running instructions.